--- a/GITTESTPROJ/process/FirstJob_0.1.properties
+++ b/GITTESTPROJ/process/FirstJob_0.1.properties
@@ -3,7 +3,7 @@
   <TalendProperties:Property xmi:id="_-aqGUJFGEeeBXIZYiGntaA" id="_-ao4MJFGEeeBXIZYiGntaA" label="FirstJob" creationDate="2017-09-04T12:06:52.018+0530" modificationDate="2017-09-04T13:38:33.183+0530" version="0.1" statusCode="" item="_-aqGUpFGEeeBXIZYiGntaA" displayName="FirstJob">
     <author href="../talend.project#_VON0IJE7EeeNRM6Bqvw9Vg"/>
   </TalendProperties:Property>
-  <TalendProperties:ItemState xmi:id="_-aqGUZFGEeeBXIZYiGntaA" path=""/>
+  <TalendProperties:ItemState xmi:id="_-aqGUZFGEeeBXIZYiGntaA" path="" deleted="true"/>
   <TalendProperties:ProcessItem xmi:id="_-aqGUpFGEeeBXIZYiGntaA" property="_-aqGUJFGEeeBXIZYiGntaA" state="_-aqGUZFGEeeBXIZYiGntaA">
     <process href="FirstJob_0.1.item#/"/>
   </TalendProperties:ProcessItem>
