-     Create process item 'childJob' at path '' in project 'GitTestProj'     Delete items...       Delete (physical) process item 'parentJob' at path '' in project 'GitTestProj'         Save project 'GitTestProj'

--- a/GITTESTPROJ/talend.project
+++ b/GITTESTPROJ/talend.project
@@ -116,26 +116,6 @@
       <relatedItems xmi:id="_-gPJ7pFGEeeBXIZYiGntaA" id="DQTechnical" version="Latest" type="routine"/>
       <relatedItems xmi:id="_-gPJ75FGEeeBXIZYiGntaA" id="DataQualityDependencies" version="Latest" type="routine"/>
     </ItemsRelations>
-    <ItemsRelations xmi:id="_QchMcJFLEeexL6sAl-59SA">
-      <baseItem xmi:id="_QchMcZFLEeexL6sAl-59SA" id="_ODNLsJFLEeexL6sAl-59SA" version="0.1" type="job"/>
-      <relatedItems xmi:id="_QchMcpFLEeexL6sAl-59SA" id="_KcKzkJFLEeexL6sAl-59SA" version="Latest" type="job"/>
-      <relatedItems xmi:id="_QchMc5FLEeexL6sAl-59SA" id="SQLike" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_QchMdJFLEeexL6sAl-59SA" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_QchMdZFLEeexL6sAl-59SA" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_QchMdpFLEeexL6sAl-59SA" id="DataMasking" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_QchMd5FLEeexL6sAl-59SA" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_QchMeJFLEeexL6sAl-59SA" id="DqStringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_QchMeZFLEeexL6sAl-59SA" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_QchMepFLEeexL6sAl-59SA" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_QchMe5FLEeexL6sAl-59SA" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_QchMfJFLEeexL6sAl-59SA" id="DataQuality" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_QchMfZFLEeexL6sAl-59SA" id="Mathematical" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_QchMfpFLEeexL6sAl-59SA" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_QchMf5FLEeexL6sAl-59SA" id="DQTechnical" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_QchMgJFLEeexL6sAl-59SA" id="DataQualityDependencies" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_jvsQ0JFMEeexL6sAl-59SA" id="_hKoTEJFMEeexL6sAl-59SA" version="Latest" type="job"/>
-      <relatedItems xmi:id="_4LMrsJFMEeexL6sAl-59SA" id="_10AK0JFMEeexL6sAl-59SA" version="Latest" type="job"/>
-    </ItemsRelations>
     <ItemsRelations xmi:id="_SK9EMJFLEeexL6sAl-59SA">
       <baseItem xmi:id="_SK9EMZFLEeexL6sAl-59SA" id="_SKr-cJFLEeexL6sAl-59SA" version="0.1" type="job"/>
       <relatedItems xmi:id="_SK9EMpFLEeexL6sAl-59SA" id="SQLike" version="Latest" type="routine"/>
@@ -186,6 +166,23 @@
       <relatedItems xmi:id="_10ItvZFMEeexL6sAl-59SA" id="Relational" version="Latest" type="routine"/>
       <relatedItems xmi:id="_10ItvpFMEeexL6sAl-59SA" id="DQTechnical" version="Latest" type="routine"/>
       <relatedItems xmi:id="_10Itv5FMEeexL6sAl-59SA" id="DataQualityDependencies" version="Latest" type="routine"/>
+    </ItemsRelations>
+    <ItemsRelations xmi:id="_ELUZMJFOEeexL6sAl-59SA">
+      <baseItem xmi:id="_ELUZMZFOEeexL6sAl-59SA" id="_KcKzkJFLEeexL6sAl-59SA" version="0.1" type="job"/>
+      <relatedItems xmi:id="_ELUZMpFOEeexL6sAl-59SA" id="SQLike" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_ELUZM5FOEeexL6sAl-59SA" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_ELUZNJFOEeexL6sAl-59SA" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_ELUZNZFOEeexL6sAl-59SA" id="DataMasking" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_ELUZNpFOEeexL6sAl-59SA" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_ELUZN5FOEeexL6sAl-59SA" id="DqStringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_ELUZOJFOEeexL6sAl-59SA" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_ELUZOZFOEeexL6sAl-59SA" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_ELUZOpFOEeexL6sAl-59SA" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_ELUZO5FOEeexL6sAl-59SA" id="DataQuality" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_ELUZPJFOEeexL6sAl-59SA" id="Mathematical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_ELUZPZFOEeexL6sAl-59SA" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_ELUZPpFOEeexL6sAl-59SA" id="DQTechnical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_ELUZP5FOEeexL6sAl-59SA" id="DataQualityDependencies" version="Latest" type="routine"/>
     </ItemsRelations>
     <migrationTask xmi:id="_VNbJ8JE7EeeNRM6Bqvw9Vg" id="org.talend.repository.localprovider.RemoveRoutineFolderTask" breaks="5.1.1" version="5.1.2" status="noimpact"/>
     <migrationTask xmi:id="_VNbJ8ZE7EeeNRM6Bqvw9Vg" id="org.talend.repository.localprovider.model.migration.ChangeXmiSerialization" breaks="5.1.1" version="5.1.2" status="noimpact"/>
