Create process item 'ChildJobs' at path 'Test/Case00081292' in project 'GitTestProj'     Delete items...       Delete (physical) process item 'Copy_of_ChildJobs' at path 'Case00081292' in project 'GitTestProj'         Save project 'GitTestProj'

--- a/GITTESTPROJ/talend.project
+++ b/GITTESTPROJ/talend.project
@@ -257,22 +257,22 @@
       <relatedItems xmi:id="_pA24MJH_EeeHB9XwlRsXnA" id="DataQualityDependencies" version="Latest" type="routine"/>
       <relatedItems xmi:id="_t21voJH_EeeHB9XwlRsXnA" id="_rH5dIJH_EeeHB9XwlRsXnA" version="Latest" type="job"/>
     </ItemsRelations>
-    <ItemsRelations xmi:id="_rIBY8JH_EeeHB9XwlRsXnA">
-      <baseItem xmi:id="_rIBY8ZH_EeeHB9XwlRsXnA" id="_rH5dIJH_EeeHB9XwlRsXnA" version="0.1" type="job"/>
-      <relatedItems xmi:id="_rIBY8pH_EeeHB9XwlRsXnA" id="SQLike" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rIBY85H_EeeHB9XwlRsXnA" id="Numeric" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rIBY9JH_EeeHB9XwlRsXnA" id="TalendString" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rIBY9ZH_EeeHB9XwlRsXnA" id="DataMasking" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rIBY9pH_EeeHB9XwlRsXnA" id="DataOperation" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rIBY95H_EeeHB9XwlRsXnA" id="DqStringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rIBY-JH_EeeHB9XwlRsXnA" id="StringHandling" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rIBY-ZH_EeeHB9XwlRsXnA" id="TalendDataGenerator" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rIBY-pH_EeeHB9XwlRsXnA" id="TalendDate" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rIBY-5H_EeeHB9XwlRsXnA" id="DataQuality" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rIBY_JH_EeeHB9XwlRsXnA" id="Mathematical" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rIBY_ZH_EeeHB9XwlRsXnA" id="Relational" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rIBY_pH_EeeHB9XwlRsXnA" id="DQTechnical" version="Latest" type="routine"/>
-      <relatedItems xmi:id="_rIBY_5H_EeeHB9XwlRsXnA" id="DataQualityDependencies" version="Latest" type="routine"/>
+    <ItemsRelations xmi:id="_TxgJAJIAEeeHB9XwlRsXnA">
+      <baseItem xmi:id="_TxgJAZIAEeeHB9XwlRsXnA" id="_kHPd0JH_EeeHB9XwlRsXnA" version="0.1" type="job"/>
+      <relatedItems xmi:id="_TxgJApIAEeeHB9XwlRsXnA" id="SQLike" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_TxgJA5IAEeeHB9XwlRsXnA" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_TxgJBJIAEeeHB9XwlRsXnA" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_TxgJBZIAEeeHB9XwlRsXnA" id="DataMasking" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_TxgJBpIAEeeHB9XwlRsXnA" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_TxgJB5IAEeeHB9XwlRsXnA" id="DqStringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_TxgJCJIAEeeHB9XwlRsXnA" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_TxgJCZIAEeeHB9XwlRsXnA" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_TxgJCpIAEeeHB9XwlRsXnA" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_TxgJC5IAEeeHB9XwlRsXnA" id="DataQuality" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_TxgJDJIAEeeHB9XwlRsXnA" id="Mathematical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_TxgJDZIAEeeHB9XwlRsXnA" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_TxgJDpIAEeeHB9XwlRsXnA" id="DQTechnical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_TxgJD5IAEeeHB9XwlRsXnA" id="DataQualityDependencies" version="Latest" type="routine"/>
     </ItemsRelations>
     <migrationTask xmi:id="_VNbJ8JE7EeeNRM6Bqvw9Vg" id="org.talend.repository.localprovider.RemoveRoutineFolderTask" breaks="5.1.1" version="5.1.2" status="noimpact"/>
     <migrationTask xmi:id="_VNbJ8ZE7EeeNRM6Bqvw9Vg" id="org.talend.repository.localprovider.model.migration.ChangeXmiSerialization" breaks="5.1.1" version="5.1.2" status="noimpact"/>
